--- a/public/index.html
+++ b/public/index.html
@@ -1,67 +1,90 @@
-<html>
-<body>
+<!doctype html>
+<html lang="en">
+    <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="./css/fff.min.css">
 
-<div id="container">
-    <div id="sidebar">
-        <div class="sidebar-wrapper">
-            <div class="card" id="station-sidebar">
-                <div class="card-header">
-                    <h5 class="card-title">
-                        Stationsliste
-                        <button type="button" class="btn btn-sm btn-outline-secondary pull-right" id="sidebar-hide-btn">
-                            <i class="fa fa-chevron-left"></i>
-                        </button></h5>
-                </div>
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-10">
-                            <input type="text" class="form-control form-control-sm search" placeholder="Filter" />
+        <title>Hello, world!</title>
+    </head>
+    <body class="map">
+        <nav class="navbar navbar-expand-md navbar-light bg-light">
+            <a class="navbar-brand" href="#">
+                Fridays for Future
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+            </div>
+        </nav>
+
+        <div id="container">
+            <div id="sidebar">
+                <div class="sidebar-wrapper">
+                    <div class="card" id="station-sidebar">
+                        <div class="card-header">
+                            <h5 class="card-title">
+                                Stationsliste
+                                <button type="button" class="btn btn-sm btn-outline-secondary pull-right" id="sidebar-hide-btn">
+                                    <i class="fa fa-chevron-left"></i>
+                                </button></h5>
                         </div>
-                        <div class="col-2">
-                            <button type="button" class="btn btn-sm btn-primary pull-right sort" data-sort="feature-name" id="sort-btn">
-                                <i class="fa fa-sort"></i>
-                            </button>
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-10">
+                                    <input type="text" class="form-control form-control-sm search" placeholder="Filter" />
+                                </div>
+                                <div class="col-2">
+                                    <button type="button" class="btn btn-sm btn-primary pull-right sort" data-sort="feature-name" id="sort-btn">
+                                        <i class="fa fa-sort"></i>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-body p-0">
+                            <table class="table table-hover" id="feature-list">
+                                <tbody class="list"></tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
-                <div class="card-body p-0">
-                    <table class="table table-hover" id="feature-list">
-                        <tbody class="list"></tbody>
-                    </table>
+            </div>
+            <div id="map" style="height: 100%;"></div>
+        </div>
+
+        <div class="modal" tabindex="-1" role="dialog" id="featureModal">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="feature-title">Modal title</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body" id="feature-info">
+                        <p>Modal body text goes here.</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                            Schließen
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div id="map"></div>
-</div>
-
-<div class="modal" tabindex="-1" role="dialog" id="featureModal">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="feature-title">Modal title</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body" id="feature-info">
-                <p>Modal body text goes here.</p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">
-                    Schließen
-                </button>
-            </div>
-        </div>
-    </div>
-</div>
-<script src="{{ asset('/js/list.min.js') }}"></script>
-<script src="{{ asset('/js/leaflet.markercluster.js') }}"></script>
-<script src="{{ asset('/js/L.Control.Locate.min.js') }}"></script>
-<!--<script src="{{ asset('/js/leaflet-groupedlayercontrol.min.js') }}"></script>-->
-<script src="{{ asset('/js/leaflet.extra-markers.min.js') }}"></script>
-<script src="{{ asset('/js/leaflet-hash.js') }}"></script>
-<script src="{{ asset('/js/app.min.js') }}"></script>
-</body>
+        <script src="/js/jquery.min.js"></script>
+        <script src="/js/bootstrap.min.js"></script>
+        <script src="/js/leaflet.js"></script>
+        <script src="/js/list.min.js"></script>
+        <script src="/js/leaflet.markercluster.js"></script>
+        <script src="/js/L.Control.Locate.min.js"></script>
+        <script src="/js/leaflet.extra-markers.min.js"></script>
+        <script src="/js/leaflet-hash.js"></script>
+        <script src="/js/app.min.js"></script>
+    </body>
 </html>
