--- a/public/index.html
+++ b/public/index.html
@@ -85,6 +85,7 @@
         <script src="/js/L.Control.Locate.min.js"></script>
         <script src="/js/leaflet.extra-markers.min.js"></script>
         <script src="/js/leaflet-hash.js"></script>
+        <script src="/js/dateformat.js"></script>
         <script src="/js/app.min.js"></script>
     </body>
 </html>
