--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
                     <div class="card" id="station-sidebar">
                         <div class="card-header">
                             <h5 class="card-title">
-                                Stationsliste
+                                Städteliste
                                 <button type="button" class="btn btn-sm btn-outline-secondary pull-right" id="sidebar-hide-btn">
                                     <i class="fa fa-chevron-left"></i>
                                 </button></h5>
