--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,10 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-        <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="./css/fff.min.css">
-
-        <title>Hello, world!</title>
+        <title>Fridays for Future</title>
     </head>
     <body class="map">
         <nav class="navbar navbar-expand-md navbar-light bg-light">
