Add menu and green header.

--- a/public/index.html
+++ b/public/index.html
@@ -7,15 +7,26 @@
         <title>Fridays for Future</title>
     </head>
     <body class="map">
-        <nav class="navbar navbar-expand-md navbar-light bg-light">
-            <a class="navbar-brand" href="#">
+        <nav class="navbar navbar-expand-md navbar-light bg-success">
+            <a class="navbar-brand text-white" href="https://www.fridaysforfuture.org/">
                 Fridays for Future
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="https://www.fridaysforfuture.org/events/graph">
+                            Events / Graph <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="https://www.fridaysforfuture.org/events/list">
+                            Events / List
+                        </a>
+                    </li>
+                </ul>
             </div>
         </nav>
 
