--- a/public/index.html
+++ b/public/index.html
@@ -118,7 +118,7 @@
                         <p>
                             Verantwortlich nach § 5 TMG:
                         </p>
-                        
+
                         <p>
                             Malte Hübner<br />Niebuhrstraße 48<br />24118 Kiel
                         </p>
@@ -144,5 +144,22 @@
         <script src="/js/leaflet-hash.js"></script>
         <script src="/js/dateformat.js"></script>
         <script src="/js/app.min.js"></script>
+
+        <!-- Matomo -->
+        <script type="text/javascript">
+            var _paq = window._paq || [];
+            /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+            _paq.push(["setCookieDomain", "*.fff-strike-map.maltehuebner.de"]);
+            _paq.push(['trackPageView']);
+            _paq.push(['enableLinkTracking']);
+            (function() {
+                var u="//piwik.caldera.cc/";
+                _paq.push(['setTrackerUrl', u+'matomo.php']);
+                _paq.push(['setSiteId', '21']);
+                var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+                g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
+            })();
+        </script>
+        <!-- End Matomo Code -->
     </body>
 </html>
