--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,12 @@
                     </li>
 
                     <li class="nav-item">
+                        <a class="nav-link text-white toggle-sidebar" href="#">
+                            Städteliste
+                        </a>
+                    </li>
+
+                    <li class="nav-item">
                         <a class="nav-link text-white" href="#" data-toggle="modal" data-target="#privacy-modal">
                             Datenschutz
                         </a>
@@ -50,7 +56,7 @@
                         <div class="card-header">
                             <h5 class="card-title">
                                 Städteliste
-                                <button type="button" class="btn btn-sm btn-outline-secondary pull-right" id="sidebar-hide-btn">
+                                <button type="button" class="btn btn-sm btn-outline-secondary pull-right toggle-sidebar">
                                     <i class="fa fa-chevron-left"></i>
                                 </button></h5>
                         </div>
